// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Should correctly display ExpensesSummary with 1 expense 1`] = `
<div>
  <h1>
     
    Viewing 
    1
     
    expense
     totalling £
    2.35
  </h1>
</div>
`;

exports[`Should correctly display ExpensesSummary with multiple expenses 1`] = `
<div>
  <h1>
     
    Viewing 
    27
     
    expenses
     totalling £
    232,232,113.25
  </h1>
</div>
`;
